src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone_Number__c</fullName>
        <label>Bank Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Batch_Time__c</fullName>
        <label>Batch Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jaipur</fullName>
                </value>
                <value>
                    <fullName>Ajmer</fullName>
                </value>
                <value>
                    <fullName>Sikar</fullName>
                </value>
                <value>
                    <fullName>Kota</fullName>
                </value>
                <value>
                    <fullName>Jodhpur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>11th</fullName>
                </value>
                <value>
                    <fullName>12th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <label>Donation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exam_Fees_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exam Fees Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Father_Mobile_Number__c</fullName>
        <label>Father Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fees Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Number__c</fullName>
        <label>Home Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linkedin_Profile__c</fullName>
        <label>Linkedin Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Overall_Grade__c</fullName>
        <label>Overall Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>C+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Exam_Fees__c</fullName>
        <label>Pending Exam Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Fees_Amount__c</fullName>
        <label>Pending Fees Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Overall_Amount__c</fullName>
        <label>Pending Overall Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Section A</fullName>
                </value>
                <value>
                    <fullName>Section B</fullName>
                </value>
                <value>
                    <fullName>Section C</fullName>
                </value>
                <value>
                    <fullName>Section D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rajasthan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Commerce</fullName>
                </value>
                <value>
                    <fullName>Computer Science</fullName>
                </value>
                <value>
                    <fullName>Biological</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <label>Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subjects_in_which_Back__c</fullName>
        <label>Subjects in which Back</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Computer Programming</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Sem Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Sem_Percentage__c</fullName>
        <label>1st Sem Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2nd Sem Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Percentage__c</fullName>
        <label>2nd Sem Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3nd_Sem_Percentage__c</fullName>
        <label>3nd Sem Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3rd_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Sem Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4th_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4th Sem Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4th_Sem_Percentage__c</fullName>
        <label>4th Sem Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
	 <fields>
        <fullName>Year_Of_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Year Of Class</label>
        <referenceTo>Year_Of_Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Registrar</fullName>
        <active>true</active>
        <label>Registrar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>